--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -13,6 +13,7 @@ if(${TARGET_MODULE} STREQUAL "ZHAGA_DALI")
         "${CMAKE_SOURCE_DIR}/main/web/*.c"
     )
     #set(MODULE_DEFINE LSX_ZHAGA_DALI LSX_RELEASE)
+    #set(MODULE_DEFINE LSX_ZHAGA_DALI, LSX_S33)
     set(MODULE_DEFINE LSX_ZHAGA_DALI)
 elseif(${TARGET_MODULE} STREQUAL "C3_MINI")
     file(GLOB MODULE_SOURCES 
